add on to workflow

--- a/.github/workflows/write_to_html.yaml
+++ b/.github/workflows/write_to_html.yaml
@@ -1,5 +1,15 @@
 # https://docs.marimo.io/guides/publishing/github_pages/#publish-using-github-actions
 
+name: Write HTML
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - '**'
+
 jobs:
     build:
         runs-on: ubuntu-latest
