--- a/.github/workflows/write_to_html.yaml
+++ b/.github/workflows/write_to_html.yaml
@@ -22,10 +22,11 @@ jobs:
               uses: actions/setup-python@v2
               with:
                 python-version: 3.9
+
             - name: Install dependencies
               run: |
-                python3 -m pip install --upgrade pip
-                python3 -m pip install marimo pints matplotlib numpy
+                python -m pip install --upgrade pip
+                python -m pip install marimo pints matplotlib numpy
 
             - name: Export notebook
               run: |
