--- a/.github/workflows/write_to_html.yaml
+++ b/.github/workflows/write_to_html.yaml
@@ -26,7 +26,7 @@ jobs:
             - name: Install dependencies
               run: |
                 python -m pip install --upgrade pip
-                python -m pip install marimo pints matplotlib numpy
+                python -m pip install setuptools marimo pints matplotlib numpy
 
             - name: Export notebook
               run: |
