--- a/.github/workflows/write_to_html.yaml
+++ b/.github/workflows/write_to_html.yaml
@@ -26,6 +26,7 @@ jobs:
             - name: Install dependencies
               run: |
                 python -m pip install --upgrade pip
+                sudo apt install python3-distutils
                 pip install --upgrade setuptools
                 python -m pip install marimo pints matplotlib numpy
 
