--- a/.github/workflows/write_to_html.yaml
+++ b/.github/workflows/write_to_html.yaml
@@ -12,7 +12,7 @@ on:
 
 jobs:
     build:
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-22
 
         steps:
             - name: Checkout code
@@ -25,8 +25,7 @@ jobs:
 
             - name: Install dependencies
               run: |
-                python -m pip install --upgrade pip
-                sudo apt install python3-distutils
+                python -m pip install --upgrade pip setuptools wheel
                 pip install --upgrade setuptools
                 python -m pip install marimo pints matplotlib numpy
 
