--- a/.github/workflows/write_to_html.yaml
+++ b/.github/workflows/write_to_html.yaml
@@ -25,6 +25,7 @@ jobs:
 
             - name: Install dependencies
               run: |
+                sudo apt install python3.12-distutils
                 python -m pip install --upgrade pip setuptools wheel
                 pip install --upgrade setuptools
                 python -m pip install marimo pints matplotlib numpy
