--- a/.github/workflows/write_to_html.yaml
+++ b/.github/workflows/write_to_html.yaml
@@ -28,7 +28,7 @@ jobs:
                 sudo apt install python3-distutils
                 python -m pip install --upgrade pip setuptools wheel
                 pip install --upgrade setuptools
-                python -m pip install marimo pints matplotlib numpy
+                python -m pip install marimo pints matplotlib numpy==1.26
 
             - name: Export notebook
               run: |
